src/xml/metodo/gramaticaMetodo.jj
options {
IGNORE_CASE = true;
STATIC = false;
     OUTPUTOKEN_DIRECTORY="C://Users//anick//Documents//NetBeansProjects//[Compi2]Proyecto1_201212859//FISQL//src//xml//metodo//";
}

PARSER_BEGIN(metodo)
package xml.metodo;
import java.util.ArrayList;
import archivos.*;
import archivos.metodo.*;

public class metodo {
  private ArrayList<parametro> lp= new ArrayList<parametro>();
  private ArrayList<procedure> lproc = new ArrayList<procedure>();
  private String nombre_proc, nombre_param, codigo, tipo;

  public static void main(String args[]) throws ParseException {
    metodo parser = new metodo(System.in);
    parser.S();
  }
}
PARSER_END(metodo)

TOKEN:
{   
  
  <TOKEN_PROC_ABRE: ("<proc>")> {System.out.println(image);}
  |<TOKEN_PROC_CIERRA: ("</proc>")> {System.out.println(image);}
  |<TOKEN_NOMBRE_ABRE: ("<nombre>")> {System.out.println(image);}
  |<TOKEN_NOMBRE_CIERRA: ("</nombre>")> {System.out.println(image);}
  |<TOKEN_PARAMS_ABRE: ("<params>")> {System.out.println(image);}
  |<TOKEN_PARAMS_CIERRA: ("</params>")> {System.out.println(image);}
  |<TOKEN_SRC_ABRE: ("<src>")> {System.out.println(image);}
  |<TOKEN_SRC_CIERRA: ("</src>")> {System.out.println(image);}
  |<TOKEN_TEXT_ABRE: ("<cadena>")> {System.out.println(image);}
  |<TOKEN_TEXT_CIERRA: ("</cadena>")> {System.out.println(image);}
  |<TOKEN_INTEGER_ABRE: ("<entero>")> {System.out.println(image);}
  |<TOKEN_INTEGER_CIERRA: ("</entero>")> {System.out.println(image);}
  |<TOKEN_DOUBLE_ABRE: ("<double>")> {System.out.println(image);}
  |<TOKEN_DOUBLE_CIERRA: ("</double>")> {System.out.println(image);}
  |<TOKEN_BOOL_ABRE: ("<bool>")> {System.out.println(image);}
  |<TOKEN_BOOL_CIERRA: ("</bool>")> {System.out.println(image);}
  |<TOKEN_DATE_ABRE: ("<date>")> {System.out.println(image);}
  |<TOKEN_DATE_CIERRA: ("</date>")> {System.out.println(image);}
  |<TOKEN_DATETIME_ABRE: ("<datetime>")> {System.out.println(image);}
  |<TOKEN_DATETIME_CIERRA: ("</datetime>")> {System.out.println(image);}

  |<TOKEN_ID_ABRE: ("<")(["a"-"z","A"-"Z"])(["a"-"z","A"-"Z","0"-"9","_"])* (">")> {System.out.println(image);}
  |<TOKEN_ID_CIERRA: ("</")(["a"-"z","A"-"Z"])(["a"-"z","A"-"Z",    "0"-"9","_"])* (">")> {System.out.println(image);}
  |<CADENA:"\"" (~["\""])*"\""> {System.out.println(image);}
  |<CODIGO:"\u007e" (~["\u007e"])* "\u007e"> {System.out.println(image);}
}

SKIP: 
{
  " "
| "\n"
| "\r"
| "\t"
}

ArrayList<procedure> S():
{}
{
   PROC() {return lproc;}
}


void PROC():
{Token t,cod;}
{
        (
        <TOKEN_PROC_ABRE> 
            <TOKEN_NOMBRE_ABRE> t=<CADENA> <TOKEN_NOMBRE_CIERRA>
                <TOKEN_PARAMS_ABRE> (LISTA_PARAMS())? <TOKEN_PARAMS_CIERRA>    
            <TOKEN_SRC_ABRE> cod=<CODIGO> <TOKEN_SRC_CIERRA>
        <TOKEN_PROC_CIERRA>
        ) 
        {
            nombre_proc= t.image;
            nombre_proc= nombre_proc.substring(1, nombre_proc.length()-1);
            codigo = cod.image;
            codigo = codigo.substring(1, codigo.length()-1);
            procedure p= new procedure(nombre_proc,lp,codigo);
            lproc.add(p);
            lp= new ArrayList<parametro>();
            
        }
        (PROC())?
}


void LISTA_PARAMS():
{}
{
        PARAMS() (LISTA_PARAMS())?
}

void PARAMS():
{Token t,tip;}
{
   <TOKEN_INTEGER_ABRE> t=<CADENA> <TOKEN_INTEGER_CIERRA> {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"ENTERO");
                                                                lp.add(p);
                                                            }
    |<TOKEN_TEXT_ABRE> t=<CADENA> <TOKEN_TEXT_CIERRA>       {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"CADENA");
                                                                lp.add(p);                                                            
                                                            }
    |<TOKEN_DOUBLE_ABRE> t=<CADENA> <TOKEN_DOUBLE_CIERRA>   {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"DOUBLE");
                                                                lp.add(p);  
                                                            }
    |<TOKEN_BOOL_ABRE> t=<CADENA> <TOKEN_BOOL_CIERRA>       {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"BOOL");
                                                                lp.add(p);  
                                                            }
    |<TOKEN_DATE_ABRE> t=<CADENA> <TOKEN_DATE_CIERRA>       {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"DATE");
                                                                lp.add(p);  
                                                            }
    |<TOKEN_DATETIME_ABRE> t=<CADENA> <TOKEN_DATETIME_CIERRA> {
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,"DATETIME");
                                                                lp.add(p);
                                                              } 
    |tip=<TOKEN_ID_ABRE> t=<CADENA> <TOKEN_ID_CIERRA>         {
                                                                tipo = tip.image;
                                                                tipo = tipo.substring(1, tipo.length()-1);
                                                                nombre_param= t.image;
                                                                nombre_param= nombre_param.substring(1, nombre_param.length()-1);
                                                                parametro p=new parametro(nombre_param,tipo);
                                                                lp.add(p);
                                                              } 
}
